Game page, sprite module, and server serving the frontend

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:2943/assets/style.css">
 </head>
 
 <body>
     <div id="app"></div>
     <script type="module">
-        import init from '/pkg/package.js';
-        init('/pkg/package_bg.wasm');
+        import init from 'http://localhost:2943/pkg/package.js';
+        init('http://localhost:2943/pkg/package_bg.wasm');
     </script>
 </body>
 
